<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ratemyvendorapp.MainActivity"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_my_vendor"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textColor="@color/colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:fontFamily="casual"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="24sp"
        tools:ignore="LabelFor"
        android:layout_marginTop="20dp"
        android:hint="@string/first_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="24sp"
        tools:ignore="LabelFor"
        android:hint="@string/last_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="24sp"
        tools:ignore="LabelFor"
        android:hint="@string/location" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif"
        android:textSize="24sp"
        android:labelFor="@+id/signinBtn"
        tools:ignore="LabelFor"
        android:hint="@string/e_mail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textSize="24sp"
        android:labelFor="@+id/signinBtn"
        tools:ignore="LabelFor"
        android:hint="@string/password" />

    <Button
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="?android:attr/colorAccent"
        tools:targetApi="lollipop" />



</LinearLayout>
