<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ratemyvendorapp.MainActivity"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_my_vendor"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:id="@+id/titleTxt"
        android:fontFamily="casual" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="28dp"
        android:id="@+id/emailTxt"
        android:text="@string/e_mail"
        android:fontFamily="sans-serif"
        android:textSize="24sp"
        android:labelFor="@+id/signinBtn"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordTxt"
        android:textSize="18sp"
        android:text="@string/password"
        android:labelFor="@+id/signinBtn"
        tools:ignore="LabelFor" />

    <Button
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signinBtn"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:id="@+id/orTxt"
        android:fontFamily="casual"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp" />

    <Button
        android:text="@string/browse_vendors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/browseBtn"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="18sp"/>



</LinearLayout>
