<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ratemyvendorapp.reportedReviews"
        android:orientation="vertical">

        <TextView
            android:id="@+id/myReviewsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/reports"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/original_cakerie2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:id="@+id/textView"
            android:paddingTop="20dp" />

        <TextView
            android:text="@string/this_place_was_a_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            android:id="@+id/originalCakeReview"
            android:paddingTop="20dp" />

        <Button
            android:text="@string/ignore"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textColor="?android:attr/colorAccent"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:id="@+id/btn_ignore"
            tools:targetApi="lollipop"
            android:onClick="IgnoreToast"/>

        <Button
            android:text="@string/remove"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textColor="?android:attr/colorAccent"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:id="@+id/btn_remove"
            tools:targetApi="lollipop"
            android:onClick="RemoveToast"/>


        <TextView
            android:text="@string/rockin_dj2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:id="@+id/djReviewVoew"
            android:paddingTop="10dp" />

        <TextView
            android:text="@string/lalalalalalalalalala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            android:id="@+id/rockinDJReview"
            android:paddingTop="20dp" />

        <Button
            android:text="@string/ignore2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textColor="?android:attr/colorAccent"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:id="@+id/btn_ignore2"
            tools:targetApi="lollipop"
            android:onClick="IgnoreToast"/>

        <Button
            android:text="@string/remove2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textColor="?android:attr/colorAccent"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:id="@+id/btn_remove2"
            tools:targetApi="lollipop"
            android:onClick="RemoveToast"/>

    </LinearLayout>
</ScrollView>