<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ratemyvendorapp.submitReview"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewReviewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/vendor_review"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/submitNewReviewBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/submit_a_new_review_here"
            android:textColor="?android:attr/colorAccent"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            tools:targetApi="lollipop"
            android:layout_marginTop="20dp" />


        <TextView
            android:id="@+id/presentationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:text="@string/presentation"
            android:textAlignment="textStart"
            android:textSize="30sp"
            android:textStyle="normal|bold" />


        <TextView
            android:text="@string/totalpresentation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:id="@+id/presentationResult" />

        <TextView
            android:id="@+id/serviceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:text="@string/service"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:text="#"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:id="@+id/serviceResult" />


        <TextView
            android:id="@+id/priceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:text="@string/price"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:text="#"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:id="@+id/priceResult" />


        <TextView
            android:id="@+id/professionalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:text="@string/professionalism"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:text="#"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:id="@+id/professionalResult" />


        <TextView
            android:id="@+id/OverallTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:text="@string/overall"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:text="#"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:id="@+id/overallResult" />


        <TextView
            android:id="@+id/viewComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="casual"
            android:text="@string/additional_comments"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            tools:ignore="RelativeOverlap" />

    </LinearLayout>
</ScrollView>