<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ratemyvendorapp.vendorList"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_my_vendor"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textColor="@color/colorAccent"/>

    <Button
        android:text="@string/original_cakerie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnoriginalCakerie"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="?android:attr/colorAccent"
        tools:targetApi="lollipop" />

    <Button
        android:text="Elite Decor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEliteDecor"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="?android:attr/colorAccent"
        tools:targetApi="lollipop" />

    <Button
        android:text="Chocolate Bakery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnChocolateBakery"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="?android:attr/colorAccent"
        tools:targetApi="lollipop" />

    <Button
        android:text="@string/rockin_dj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRockinDj"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="?android:attr/colorAccent"
        tools:targetApi="lollipop" />
</LinearLayout>
